added flyway baseline

--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,10 @@
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-core</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
@@ -59,6 +63,21 @@
 							<artifactId>lombok</artifactId>
 						</exclude>
 					</excludes>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.flywaydb</groupId>
+				<artifactId>flyway-maven-plugin</artifactId>
+				<!-- Configure the plugin -->
+				<configuration>
+					<!-- Database configurations -->
+					<url>jdbc:postgresql://localhost:5432/university</url>
+					<user>postgres</user>
+					<password>postroot</password>
+					<!-- Specify the location of your SQL migration scripts -->
+					<locations>
+						<location>classpath:db/migration</location>
+					</locations>
 				</configuration>
 			</plugin>
 		</plugins>
