added some logs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,8 @@ spring.datasource.password=postroot
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 #use 'validate' instead of 'update'
 spring.jpa.hibernate.ddl-auto=update
+
+#logging options
+logging.file.path=/
+logging.file.name=log.txt
+logging.level.ua.foxminded=trace
