finish schedule generation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,4 @@ spring.jpa.hibernate.ddl-auto=update
 #logging options
 logging.file.path=/
 logging.file.name=log.txt
-logging.level.ua.foxminded=trace
+logging.level.ua.foxminded=info
